create dashboard and add form add task, also create vue components

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,1 @@
-<%=  javascript_include_tag "app/app", "type": "module", "defer": true %>
+<%=  javascript_include_tag "app/home", "type": "module", "defer": true %>
