--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css", "integrity": "sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD", "crossorigin": "anonymous"%>
+    <%= stylesheet_link_tag "tabler-icons.min" %>
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <div class="container-fluid" id="app">
+    <div id="app">
       <%= yield %>
     </div>
   </body>
